--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 click==7.1.2
 Flask==1.1.2
 Flask-API==2.0
+Flask-Cors==3.0.10
 Flask-Jsonpify==1.5.0
 Flask-RESTful==0.3.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+pytz==2021.1
 PyYAML==5.4.1
-gunicorn>=20.0.4
-
+six==1.15.0
+Werkzeug==1.0.1
